@@ -1,5 +1,7 @@
 Alastair S - Thu Feb 24 2005
 	slider is now relative to screen size; is now grey also
+	screen_info globalized
+	allowed for global settings accross GCs
 
 Alastair S - Sun Feb 21 2005
 	calendar mini-ised and uses gridlines
